# flagship-lite

./: .gitignore  README.md  pyproject.toml
flagship_lite/: __init__.py  cli.py  evaluator.py  flags.py  loader.py  sdk.py  server.py  stale_detector.py
